--- a/settings.json
+++ b/settings.json
@@ -4,40 +4,17 @@
         "eventType": "upcoming",
         "videoType": "video",
         "regionCode": "BR",
-        "language": "pt_br",
+        "language": "pt",
         "order": "date",
-        "publishedAfter": "2020-01-01T00:01:01.000Z",
-        "publishedBefore": "",
-        "location": "-23.5489,-46.6388",
-        "locationRadius": "1000km",
+        "publishedAfter": "2020-04-01T00:01:01.000Z",
+        "location": "",
+        "locationRadius": "",
         "maxResults": 50
     },
     "video": {
         "part": "id,liveStreamingDetails,snippet,player,recordingDetails,statistics"
     },
-    "locations": [
-        {
-            "name": "nordeste",
-            "coordenates": "-8.110560,-42.948900",
-            "radius": "1000km"
-        },
-        {
-            "name": "sul-sudeste",
-            "coordenates": "-23.081080,-50.752640",
-            "radius": "1000km"
-        },
-        {
-            "name": "norte",
-            "coordenates": "-5.813030,-61.299700",
-            "radius": "1000km"
-        },
-        {
-            "name": "centro-leste",
-            "coordenates": "-15.452550,-47.615730",
-            "radius": "1000km"
-        }
-    ],
     "auth": [
-        "AIzaSyDuHifom-_BKMQOMVWcbDRZkC_I3H3CgWc"
+        "AIzaSyBvK4DPRkg5Ut174Ob6DmIFO25vDNY3rR4"
     ]
 }
