--- a/settings.json
+++ b/settings.json
@@ -6,7 +6,7 @@
         "regionCode": "BR",
         "language": "pt",
         "order": "relevance",
-        "publishedAfter": "2020-05-30T00:01:01.000Z",
+        "publishedAfter": "",
         "location": "",
         "locationRadius": "",
         "maxResults": 50
