--- a/settings.json
+++ b/settings.json
@@ -16,5 +16,12 @@
     },
     "auth": [
         "AIzaSyBvK4DPRkg5Ut174Ob6DmIFO25vDNY3rR4"
-    ]
+    ],
+    "categories":["10", "24", "23", "27", "34", "17"],
+    "rabbit":{
+        "hostname": "BRSAOCND7220C2Y",
+        "port": "5672",
+        "user": "guest",
+        "pass": "guest"
+    }
 }
